# mcp-tutorial

./: .env.example  .gitignore  GUIDE_ADD_API.md  MCP_GUIDE.md  README.md  README_MCP_SERVER.md  mcp_demo.py  mock_demo.py  pyproject.toml  requirements.txt  simple_mcp_client_run.py  simplified_demo.py  start_server.py  test.ipynb  test_openai_client.py  tutorial.ipynb
src/cli/: cli.py
src/mcp_host/: azure_openai_host.py  context_manager.py  mock_openai.py  prompts.py  simplified_host.py
src/openapi_mcp_server/: __init__.py  server.py
src/openapi_mcp_server/knowledge/: api.py
src/openapi_mcp_server/paper/: api.py
src/openapi_mcp_server/scholar/: api.py
